syntax = "proto3";
service NoteService {
    rpc List (Empty) returns (NoteList) {}
}
message Empty {}
message Note {
   string id = 1;
   string title = 2;
   string content = 3;
}
message NoteList {
   repeated Note notes = 1;
}